# ml-prefect-fastapi-examples

./: .gitignore  README.md
api/: Dockerfile  README.md  pyproject.toml
api/config/: app_config.yaml  logging_config.yaml
api/src/application/: recommendation_service.py
api/src/infrastructure/: bigtable_repository.py  logger.py
api/src/presentation/: main.py  recommendation_schema.py
api/tests/: test_app.py
api_onion/: Dockerfile  README.md  pyproject.toml
api_onion/app/application/: recommend_service.py
api_onion/app/domain/: recommenders.py
api_onion/app/domain/models/: recommend_item.py
api_onion/app/infrastructure/clients/: bigtable.py  client_interface.py
api_onion/app/infrastructure/repositories/: recommend_item_repository.py
api_onion/app/presentation/: main.py
api_onion/app/utils/: const.py
api_onion/tests/: test_rest_api.py
ml_pipeline/: Dockerfile  README.md  pyproject.toml
ml_pipeline/ml_pipeline/: pipeline.py
ml_pipeline/ml_pipeline/config/: constants.py  logging_config.yaml  parameters.yaml
ml_pipeline/ml_pipeline/tasks/: infer.py  preprocess.py  train.py
ml_pipeline/ml_pipeline/tests/: test_pipeline.py
ml_pipeline/ml_pipeline/utils/: bigquery_utils.py  bigtable_storage.py  file_storage.py  logger.py
ml_pipeline/ml_pipeline/validators/: result_validator.py
