[tool.poetry]
name = "recommendation-api"
version = "0.1.0"
description = "A simple recommendation API using FastAPI and BigTable"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
google-cloud-bigtable = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"