[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ml_pipeline"
version = "0.1.0"
description = "ML pipeline for user-specific item recommendations."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
packages = [{ include = "ml_pipeline" }]

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.0.0"  # Adjust according to the latest stable version
pydantic = "^1.10.0"
numpy = "^1.24.0"
pandas = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pyright = "^1.1.242"

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]  # Black compatible

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
addopts = "--maxfail=1 --disable-warnings -q"
